syntax = "proto3";

package envoy.type.tracing.v3alpha;

option java_outer_classname = "CustomTagProto";
option java_multiple_files = true;
option java_package = "io.envoyproxy.envoy.type.tracing.v3alpha";

import "envoy/type/metadata/v3alpha/metadata.proto";

import "validate/validate.proto";

// [#protodoc-title: Custom Tag]

// Describes custom tags for the active span.
message CustomTag {
  // Literal type custom tag with static value for the tag value.
  message Literal {
    // Static literal value to populate the tag value.
    string value = 1 [(validate.rules).string = {min_bytes: 1}];
  }

  // Environment type custom tag with environment name and default value.
  message Environment {
    // Environment variable name to obtain the value to populate the tag value.
    string name = 1 [(validate.rules).string = {min_bytes: 1}];

    // When the environment variable is not found,
    // the tag value will be populated with this default value if specified,
    // otherwise no tag will be populated.
    string default_value = 2;
  }

  // Header type custom tag with header name and default value.
  message Header {
    // Request header name to obtain the value to populate the tag value.
    string name = 1 [(validate.rules).string = {min_bytes: 1}];

    // When the request header does not exist,
    // the tag value will be populated with this default value if specified,
    // otherwise no tag will be populated.
    string default_value = 2;
  }

  // Metadata type custom tag using
  // :ref:`MetadataLocate <envoy_api_msg_type.metadata.v3alpha.MetadataLocate>` to retrieve tag
  // value from :ref:`Metadata <envoy_api_msg_core.Metadata>`.
  message Metadata {
    // Metadata locate to define the path to retrieve the tag value.
    metadata.v3alpha.MetadataLocate metadata_locate = 1;

    // When no valid metadata is found,
    // the tag value would be populated with this default value if specified,
    // otherwise no tag would be populated.
    string default_value = 2;
  }

  // Used to populate the tag name.
  string tag = 1 [(validate.rules).string = {min_bytes: 1}];

  // Used to specify what kind of custom tag.
  oneof type {
    option (validate.required) = true;

    // A literal custom tag.
    Literal literal = 2;

    // An environment custom tag.
    Environment environment = 3;

    // A request header custom tag.
    Header request_header = 4;

    // A custom tag to obtain tag value from the dynamic metadata associated with the request.
    Metadata request_metadata = 5;

    // A custom tag to obtain tag value from the metadata
    // provided in the config for :ref:`the route <envoy_api_field_route.Route.metadata>`.
    Metadata route_metadata = 6;
  }
}
